[gd_scene load_steps=2 format=3 uid="uid://bxad5fls4v0sc"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_vwgjb"]

[node name="PauseMenu" type="Node"]
script = ExtResource("1_vwgjb")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Resume
"

[node name="MusicButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Music on/off"

[node name="SFXButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "SFX on/off"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Main menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SFXButton" to="." method="_on_sfx_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
